Product card sass touched

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <div class="navbar__theme-icon">
         <img src="./img/svg/iconfinder_sun_226556.svg" />
       </div>
-      
+
       <ul class="navbar__list">
         <li>Home</li>
         <li>Gallery</li>
@@ -122,9 +122,7 @@
       <div class="product-grid-container">
         <div
           class="product"
-          style="
-            background-image: url('./img/product-1.jpg');
-          "
+          style="background-image: url('./img/product-1.jpg');"
         >
           <a class="grid-buy-btn" href="#">$8750</a>
           <div class="product-info">
@@ -132,64 +130,59 @@
             <h5 class="product-artist title-medium">A super artists</h5>
           </div>
         </div>
+
         <div
           class="product"
-          style="
-            background-image: url('./img/product-1.jpg');
-          "
+          style="background-image: url('./img/product-2.jpg');"
         >
-          <a href="">$8750</a>
+          <a class="grid-buy-btn" href="#">$8750</a>
           <div class="product-info">
-            <h4 class="product-name">A super artist piece</h4>
-            <h5 class="product-artist">A super artists</h5>
+            <h4 class="product-name title-medium">A super artist piece</h4>
+            <h5 class="product-artist title-medium">A super artists</h5>
           </div>
         </div>
+
         <div
           class="product"
-          style="
-            background-image: url('./img/product-1.jpg');
-          "
+          style="background-image: url('./img/product-3.jpg');"
         >
-          <a href="">$8750</a>
+          <a class="grid-buy-btn" href="#">$8750</a>
           <div class="product-info">
-            <h4 class="product-name">A super artist piece</h4>
-            <h5 class="product-artist">A super artists</h5>
+            <h4 class="product-name title-medium">A super artist piece</h4>
+            <h5 class="product-artist title-medium">A super artists</h5>
+          </div>
+        </div>        
+      
+        <div
+          class="product"
+          style="background-image: url('./img/product-4.jpg');"
+        >
+          <a class="grid-buy-btn" href="#">$8750</a>
+          <div class="product-info">
+            <h4 class="product-name title-medium">A super artist piece</h4>
+            <h5 class="product-artist title-medium">A super artists</h5>
           </div>
         </div>
+
         <div
           class="product"
-          style="
-            background-image: url('./img/product-1.jpg');
-          "
+          style="background-image: url('./img/product-5.jpg');"
         >
-          <a href="">$8750</a>
+          <a class="grid-buy-btn" href="#">$8750</a>
           <div class="product-info">
-            <h4 class="product-name">A super artist piece</h4>
-            <h5 class="product-artist">A super artists</h5>
+            <h4 class="product-name title-medium">A super artist piece</h4>
+            <h5 class="product-artist title-medium">A super artists</h5>
           </div>
         </div>
+
         <div
           class="product"
-          style="
-            background-image: url('./img/product-1.jpg');
-          "
+          style="background-image: url('./img/product-6.jpg');"
         >
-          <a href="">$8750</a>
+          <a class="grid-buy-btn" href="#">$8750</a>
           <div class="product-info">
-            <h4 class="product-name">A super artist piece</h4>
-            <h5 class="product-artist">A super artists</h5>
-          </div>
-        </div>
-        <div
-          class="product"
-          style="
-            background-image: url('./img/product-1.jpg');
-          "
-        >
-          <a href="">$8750</a>
-          <div class="product-info">
-            <h4 class="product-name">A super artist piece</h4>
-            <h5 class="product-artist">A super artists</h5>
+            <h4 class="product-name title-medium">A super artist piece</h4>
+            <h5 class="product-artist title-medium">A super artists</h5>
           </div>
         </div>
       </div>
