--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,11 @@
           Art, like morality, consists of drawing the line somewhere
         </h3>
         <div class="home__arrow">
-          <img src="./img/svg/iconfinder_sun_226556.svg" />
+          <img src="./img/svg/arrow.svg" />
         </div>
       </div>
     </section>
-
+ 
     <section class="about">
       <div class="about__left-content">
         <h1 class="main-title about__title">outstanding gallery</h1>
@@ -187,5 +187,17 @@
         </div>
       </div>
     </section>
+    <footer>
+      <h5 class="main-title-small">concept & luminosity</h5>
+
+        <ul class="navbar__list footer-list">
+          <li>Home</li>
+          <li>Gallery</li>
+          <li>About</li>
+          <li>Artists</li>
+        </ul>
+
+      <p>Copyright &copy; 2020 Matías Nicoletti</p>
+    </footer>
   </body>
 </html>
